--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,9 @@ dependencies:
   path_provider: ^2.1.5
   cached_network_image: ^3.4.1
   flutter_cache_manager: ^3.4.1
+  shimmer: ^3.0.0
+  provider: ^6.1.5+1
+  flutter_lints: ^6.0.0
 
 dev_dependencies:
   flutter_test:
@@ -56,7 +59,6 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^5.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
