--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,8 +47,8 @@ dependencies:
   cached_network_image: ^3.4.1
   flutter_cache_manager: ^3.4.1
   shimmer: ^3.0.0
-  provider: ^6.1.5+1
   flutter_lints: ^6.0.0
+  flutter_screenutil: ^5.9.3
 
 dev_dependencies:
   flutter_test:
